# anagram

./: .gitignore  index.00012532.js  index.49b259e1.css  index.html  main.js  package-lock.json  package.json  style.css  tsconfig.json  webpack.config.js
src/: diffboxes.js  index.css  index.html  index.tsx  main.js  style.css  util.js
src/components/: App.tsx  Diffbar.css  Diffbar.tsx  Editor.css  Editor.tsx
src/rust/: Cargo.toml
src/rust/src/: lib.rs
